# scrawlc

./: .gitignore  Cargo.toml  README.md
.github/workflows/: test-rust-linux.yml  test-rust-macos.yml
docs/: index.html
examples/: io_test.scrawl
src/: analyze.rs  analyzer.rs  bin.rs  lib.rs  tests.rs
src/analyzer/: parser.rs  position.rs  scanner.rs  token.rs
src/analyzer/parser/: node.rs  syntree.rs
src/analyzer/scanner/: position.rs  token.rs
